28-11-2007 Qball Cow <Qball@Sarine.nl>
	* doc/WhatsNew0.15.5.txt:	Added

28-11-2007 Qball Cow <Qball@Sarine.nl>
    * Changelog: Add missing entries.

commit 84053c8cab765eb38f87628d577a570236d5ea2a
Author: Qball Cow <Qball@sarine.nl>
Date:   Tue Nov 27 15:26:00 2007 +0100

    1. allow user to redirect output to debug file.
    2. Print connection state out, and error if it's wrong.

commit bee5658bec9c91c26ece8658b36a2c13a060d88b
Author: Qball Cow <Qball@Sarine.nl>
Date:   Fri Nov 23 14:28:46 2007 +0100

    * Add some extra sanity checks to gmpc-mpddata-model. (asserts, so gmpc won't run in a broken state, should make finding bugs easier).
    * Make gmpc-mpddata-model supports getting a MpdData list that does not point to the first entry. (causing the crash by magnatune plugin). It was the magnatune plugin misbehaving. But it's more important that gmpc-mpddata is robust.

commit c8b0a0cd2601788eb9005b35f6467a763996071e
Author: Qball Cow <Qball@sarine.nl>
Date:   Mon Nov 19 12:51:56 2007 +0100

    Update todo list

commit bd368b4657a6d230210fc7f09f3e4a24bf0ed90e
Author: Qball Cow <Qball@sarine.nl>
Date:   Mon Nov 19 00:32:36 2007 +0100

    Fix profile crasher, after adding default to profiles file, I should actually load that file

commit 4fca5f7533669a4e397155e2a21f8cc10dc74c4a
Author: Qball Cow <Qball@sarine.nl>
Date:   Mon Nov 19 00:05:28 2007 +0100

    fix profile naming

commit f283e4ed5d05f453c117b70b8965b947b1211a1c
Author: Qball Cow <qball@qball-desktop.(none)>
Date:   Sun Nov 18 16:16:05 2007 +0100

    Even an extra check for existing list element, but should never happen

commit 790cce0dbc73bd5cad590ada482b3cc55b64cd57
Author: Qball Cow <qball@qball-desktop.(none)>
Date:   Fri Nov 16 22:18:55 2007 +0100

    Bump version to 0.15.4.102

commit 4abcecd0242f48a93a736fbf134fa936a59eb01e
Author: Qball Cow <qball@qball-desktop.(none)>
Date:   Fri Nov 16 16:34:00 2007 +0100
